# ferlay

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.dev.yml  index.html  install.ps1  install.sh  privacy-policy.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-relay.yml  pages.yml  release.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/models/: connection_state.dart  relay_message.dart  session.dart
app/lib/providers/: auth_provider.dart  connection_provider.dart  relay_provider.dart  sessions_provider.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
daemon/: Cargo.toml  Dockerfile
daemon/src/: capture.rs  config.rs  crypto.rs  daemon.rs  main.rs  messages.rs  pairing.rs  relay.rs  session.rs  setup.rs
deploy/: Caddyfile  dev.ferlay.daemon.plist  docker-compose.caddy.yml  docker-compose.yml  ferlay-daemon.service  ferlay-relay.service  nginx.conf
docs/: quick-start.md  self-hosting.md
relay/: Cargo.toml  Dockerfile  docker-compose.yml
relay/src/: buffer.rs  lib.rs  main.rs  pairing.rs  push.rs  router.rs  state.rs  ws.rs
relay/tests/: integration.rs
scripts/: ferlay-local.ps1  ferlay-local.sh  install.ps1  install.sh
shared/: Cargo.toml
shared/src/: messages.rs
(+27 files in other folders)
