[package]
name = "furlay-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
furlay-shared = { path = "../shared" }
tokio = { version = "1.50", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
qr2term = "0.3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }

# E2E encryption
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
