[package]
name = "furlay-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
furlay-shared = { path = "../shared" }
tokio = { version = "1.50", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
futures-util = "0.3"
